# PhotoTux

./: .gitignore  Cargo.toml  new_theme.css  patch_session.py  temp2.txt  test.css  test_timer.rs  tmp.txt  tmp1.txt
.github/: copilot-instructions.md
crates/app_core/: Cargo.toml
crates/app_core/src/: lib.rs  main.rs  session.rs
crates/color_math/: Cargo.toml
crates/color_math/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: geometry.rs  ids.rs  lib.rs  math.rs
crates/doc_model/: Cargo.toml
crates/doc_model/src/: lib.rs
crates/file_io/: Cargo.toml
crates/file_io/src/: lib.rs
crates/history_engine/: Cargo.toml
crates/history_engine/src/: lib.rs
crates/image_ops/: Cargo.toml
crates/image_ops/src/: lib.rs
crates/render_wgpu/: Cargo.toml
crates/render_wgpu/src/: lib.rs
crates/tool_system/: Cargo.toml
crates/tool_system/src/: lib.rs
crates/ui_shell/: Cargo.toml  build.rs  resources.gresource.xml
crates/ui_shell/src/: canvas_host.rs  file_workflow.rs  layout.rs  lib.rs  menus.rs  panels.rs  shell_chrome.rs  startup.rs  status_presenter.rs  theme.rs  ui_support.rs  ui_templates.rs
crates/ui_shell/src/ui/dialogs/: info-dialog.ui
crates/ui_shell/src/ui/fragments/: document-tabs.ui  panel-group.ui  status-bar.ui  titlebar.ui  tool-options-bar.ui
crates/ui_shell/ui/: app-window.slint
docs/: README.md  architecture-overview.md  development-workflow.md  kwin-mcp-testing-guide.md  prd.md  production-readiness-checklist.md  psd-compatibility.md  research.md  roadmap.md  tasks-list.md  technical-specifications.md  testing-strategy.md  useful-links.md
docs/design-ui/: PhotoshopUI.md  design-system.md  ui-layout-spec.md
docs/post-mvp/: README.md
docs/post-mvp/plans/: README.md  editing-workflow-upgrade-plan.md  gtk-ui-template-migration-plan.md  painting-and-input-expressiveness-plan.md  psd-file-format-expansion-plan.md  release-and-distribution-plan.md  shell-usability-and-native-workflows-plan.md  text-and-design-tools-plan.md
docs/post-mvp/tasks/: README.md  editing-workflow-upgrade-tasks.md  gtk-ui-template-migration-tasks.md  painting-and-input-expressiveness-tasks.md  psd-file-format-expansion-tasks.md  release-and-distribution-tasks.md  shell-usability-and-native-workflows-tasks.md  text-and-design-tools-tasks.md
docs/pre-mvp/: README.md  tasks-list.md
docs/research/: README.md  psd-format-parser.md  research-ui-design.md  research.md
docs/tests/: kwin-mcp-test-checklist.md  post-mvp-editing-workflow-checklist.md  post-mvp-painting-checklist.md
tests/fixtures/: README.md
tests/fixtures/psd/: README.md  flattened-fallback-group.psd  generate_psd_fixtures.py  supported-blend-subset.psd  supported-simple-layers.psd  supported-visibility-opacity.psd  unsupported-clipping-fallback.psd  unsupported-cmyk-fallback.psd  unsupported-mask-fallback.psd  unsupported-smart-object-fallback.psd  unsupported-text-fallback.psd
tools/psd_import_sidecar/: README.md  phototux_psd_sidecar.py  requirements.txt  run_sidecar.sh  test_fixture_sidecar.py
