[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "webp"] }
pollster = "0.4.0"
png = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slint = { version = "1.15.1", default-features = false, features = ["std", "compat-1-2", "backend-winit-wayland", "renderer-software"] }
i-slint-backend-winit = "1.15.1"
slint-build = "1.15.1"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
wgpu = { version = "28.0.0", features = ["noop"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
