[package]
name = "app_core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
doc_model = { path = "../doc_model" }
file_io = { path = "../file_io" }
history_engine = { path = "../history_engine" }
render_wgpu = { path = "../render_wgpu" }
slint.workspace = true
thiserror.workspace = true
tool_system = { path = "../tool_system" }
tracing.workspace = true
tracing-subscriber.workspace = true
ui_shell = { path = "../ui_shell" }

[lints]
workspace = true
