[package]
name = "file_io"
version.workspace = true
edition.workspace = true

[dependencies]
color_math = { path = "../color_math" }
common = { path = "../common" }
doc_model = { path = "../doc_model" }
image.workspace = true
png.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
