[package]
name = "file_io"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
color_math = { path = "../color_math" }
common = { path = "../common" }
doc_model = { path = "../doc_model" }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
