[package]
name = "ui_shell"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
i-slint-backend-winit.workspace = true
slint.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
slint-build.workspace = true

[lints]
workspace = true
